--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=840, initial-scale=1, shrink-to-fit=no">
-    <meta name="author" content="Ziru Chen">
+    <meta name="author" content="Ziru Ron Chen">
     <meta name="description" content="Homepage">
 
-    <link rel="shortcut icon" type="image/jpg" href="img/R_favicon.jpg">
-    <title>Ziru "Ron" Chen</title>
+    <link rel="shortcut icon" type="image/jpg" href="img/logo_square.jpg">
+    <title>OSU CSE/CIS Peer Mentors</title>
     
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -18,6 +18,9 @@
   </head>
 
   <body>
+    <div>
+      <img src="img/CSECISLogoFullColor.png">
+    </div>
     <div class="container">
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <a class="navbar-brand" href="#">Ziru "Ron" Chen</a>
