--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Ziru Ron Chen">
     <meta name="description" content="Homepage">
 
-    <link rel="shortcut icon" type="image/jpg" href="img/logo_square.jpg">
+    <link rel="shortcut icon" type="image/png" href="img/logo_square.png">
     <title>OSU CSE/CIS Peer Mentors</title>
     
     <!-- Bootstrap core CSS -->
@@ -19,7 +19,7 @@
 
   <body>
     <div class="container">
-      <img src="img/CSECISLogoFullColor.png">
+      <img src="img/CSECISLogoFullColor.png" align="center" width="50%">
     </div>
 
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
