--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </head>
 
   <body>
-    <div class="container">
-      <img src="img/CSECISLogoFullColor.png" align="center" width="50%">
+    <div>
+      <img src="img/CSECISLogoFullColor.png" align="center" width="70%">
     </div>
 
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
