--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <div>
-      <img src="img/CSECISLogoFullColor.png" style="text-align:center" width="60%">
+      <img src="img/CSECISLogoFullColor.png" align="middle" width="55%">
     </div>
 
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
