--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
   </head>
 
   <body>
-    <div>
+    <div class="container">
       <img src="img/CSECISLogoFullColor.png" align="middle" width="55%">
     </div>
 
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
-      <a class="navbar-brand" href="#">Ziru "Ron" Chen</a>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Home</a>
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#News">News</a>
+                <a class="nav-link" href="#News">Mentor Bios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#Exp">Experiences</a>
+                <a class="nav-link" href="#Exp">Leadership</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#Courses">Courses</a>
+                <a class="nav-link" href="#Courses">Apply</a>
               </li>
             </ul>
     </nav>
