--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </head>
 
   <body>
-    <div class="container">
-      <img src="img/CSECISLogoFullColor.png" align="middle" width="55%">
+    <div class="container" style="text-align:center; margin-top: 15px; margin-bottom: 15px;">
+      <img src="img/CSECISLogoFullColor.png" width="50%">
     </div>
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
