--- a/index.html
+++ b/index.html
@@ -38,88 +38,26 @@
     </nav>
 
     <div class="container">
-      <div class="title">
-        <div class="intro">
-          <div class="photo"> <img src="img/Ron.jpg"> </div>
-          <div>Scanned from my handwriting</div>
-        </div>
-        <h3><strong>Ziru "Ron" Chen</strong></h3>
-        <a href="https://www.osu.edu/"><strong>The Ohio State University</strong></a> <br>
-        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:chen.8336@osu.edu">chen.8336@osu.edu</a> <br>
-        <embed src="img/github.svg" width="16" height="16" type="image/svg+xml"/> <a href="https://github.com/ronch99">ronch99</a> <br>
-        <!--
-        <embed src="img/twitter.svg" width="16" height="16" type="image/svg+xml"/> <a href="https://twitter.com/RonZiruChen">@RonZiruChen</a> <br>
-        -->
-        <br>
-        I am currently an undergraduate student at The Ohio State University, pursuing a major in <strong> Computer and Information Science </strong> (with Artificial Intelligence as my specialization) and a minor in Mathematics. Before studying abroad at OSU, I obtained my high school degree from High School Affiliated to Fudan University. <br><br>
-        Particulary, my interests focus on <strong> Natural Language Processing and Machine Learning</strong>. Besides, I am interested in natural languages themselves and philosophy. So far, I can speak Chinese, English, Japanese, and some elementary Korean. I would love to have a taste of more European languages such as Latin, as my favorite quote is in this language: <br>
-        <div class="quote">
-        &nbsp;&nbsp;&nbsp;&nbsp;“Cogito, ergo sum.” – René Descartes (Or, in English, “I think, therefore I am.”) <br>
-        </div>
-        <br>
-        Here’s my current <a href="file/Chen_Ziru.pdf">resume</a>. <br>
-      </div>
-      <div class="subtitle">
-        <embed src="img/star.svg" width="16" height="16" type="image/svg+xml"/> I am staying outside the U.S. for Autumn 2020 due to the travel ban. Please allow <strong>a 24h period</strong> to hear back from me. 
-        But you are always welcome to remind me after this grace period. <br>
-      </div>
+      Would you like to share what you have learned about surviving college as a CSE/CIS major? <br>
+      Do you have knowledge about coursework, research,  internships and student organizations to share with future CSE/CIS students? <br>
+      If so, you’re invited to apply to be a CSE/CIS Peer mentor! <br>
       <br>
-      <h4 id="News"><i>News</i></h4><hr>
-      <!--
-      <embed src="img/calendar.svg" width="16" height="16" type="image/svg+xml"/> 09/2020 - 12/2020: <strong>Grading CSE 2321, Office Hours: TBD</strong> <br>
+      Eligibility: <br>
+      – Be in good academic standing <br>
+      – Have completed a minimum of 20 hours at OSU by SU20 <br>
+      – Strong listening and communication skills <br>
       <br>
-      -->
-      <ul>
-        <li>
-          07/2020: I will be serving as the <strong>Communication Chair</strong> of a student organization, <a href="http://org.osu.edu/cse-cis-peer-mentors/">CSE/CIS Peer Mentor</a>, for AY 2020-21!
-        </li>
-        <li>
-          07/2020: I have completed auditing Prof. Andrew Ng’s <a href="https://www.coursera.org/learn/machine-learning">Machine Learning</a> on Coursera! [<a href="https://github.com/ronch99/Coursera/tree/master/MLAndrewNg">Sample coursework</a>]
-        </li>
-      </ul>
+      The CSE/CIS Peer Mentor program provides sophomores, juniors, and seniors with the opportunity to serve as a resource for first-year students during the survey class. 
+      If you enjoy to sharing your own successes and the challenges you’ve overcome while adjusting to college life, you would be a great fit. 
+      This is an unpaid opportunity to gain public speaking and teaching assistant experience and looks good on a resume as a leadership position. <br>
       <br>
-
-      <h4 id="Exp"><i>Professional Experiences</i></h4><hr>
-        <ul>
-        <li>
-          <strong> Student Instructional Assistant </strong>, Ohio State University, August 2019 - May 2020
-          <ul>
-            <li>
-              <a href="http://coe-portal.cse.ohio-state.edu/pdf-exports/CSE/CSE-2321.pdf">CSE 2321: Discrete Structures</a> (Autumn 2019; Spring 2020)
-            </li>
-            <li>
-              Grade students’ homework and report basic statistics and common mistakes to the professor
-            </li>
-            <li>
-              Answer students’ questions by holding office hours and replying to emails
-            </li>
-            <li>
-              Manage grades and course status with Carmen Canvas and write homework solutions with LaTeX
-            </li>
-          </ul>
-        </li>
-      </ul>
+      Commitment: 1-2 hours a week, for first session (7 weeks) <br>
       <br>
-
-      <h4 id="Courses"><i>Courses</i></h4><hr>
-      <ul>
-        <li>
-          <strong> CSE 5525: Speech and Language Processing (Autumn 2020) </strong>
-        </li>
-        <li>
-          <strong> CSE 3321: Automata and Formal Languages (Autumn 2020) </strong>
-        </li>
-        <li>
-          CSE 3521: Intro to Artificial Intelligence (Spring 2020)
-        </li>
-        <li>
-          CSE 2421 & 2431: Computer Organization and Operating Systems (Autumn 2019; Spring 2020)
-        </li>
-        <li>
-          CSE 2321 & 2331: Data Structures and Algorithms (Spring 2019; Autumn 2019) 
-        </li>
-      </ul>
-
+      If you have any questions, please ask your CSE/CIS academic adviser. <br>
+      To apply, you will have to fill out a short survey during the application window. This window is typically February-March. <br>
+      If you have been a peer mentor before, please apply again so that we can track submissions. <br>
+      <br>
+      The application window for CSE/CIS Peer Mentors is currently: CLOSED <br>
     </div>
   </body>
 </html>
