--- a/index.html
+++ b/index.html
@@ -52,7 +52,19 @@
       </div>
       <br>
       <h4 id="Lead"><i>Leadership</i></h4><hr>
+      <embed src="img/star.svg" width="16" height="16" type="image/svg+xml"/> <strong>Student Org Advisor</strong>: Kami Westhoff 
+      <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:westhoff.11@osu.edu">westhoff.11@osu.edu</a> <br>
       
+      <br>
+      <strong>Former Leaders: </strong>
+      <ul>
+        <li>
+          AY 2019 - 2020: 
+        </li>
+      </ul>
+      President: Laine Rumreich.1
+      Vice President: Michael Walker.2159
+      Treasurer: Riya Lengade.3
       <br>
       <h4 id="Apply"><i>Apply</i></h4><hr>
       Eligibility: <br>
