--- a/index.html
+++ b/index.html
@@ -52,19 +52,38 @@
       </div>
       <br>
       <h4 id="Lead"><i>Leadership</i></h4><hr>
-      <embed src="img/star.svg" width="16" height="16" type="image/svg+xml"/> <strong>Student Org Advisor</strong>: Kami Westhoff 
+      <embed src="img/star.svg" width="16" height="16" type="image/svg+xml"/> <strong>Student Org Advisor</strong>: Kami Westhoff &nbsp;&nbsp;&nbsp;&nbsp;
       <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:westhoff.11@osu.edu">westhoff.11@osu.edu</a> <br>
-      
+      <ul>
+        <li>
+          <strong>President</strong>: Aastha Gupta &nbsp;&nbsp;&nbsp;&nbsp;
+          <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:gupta.911@osu.edu">gupta.911@osu.edu</a> <br>
+        </li>
+        <li>
+          <strong>Vice President</strong>: Yue Zhang &nbsp;&nbsp;&nbsp;&nbsp;
+          <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:gupta.911@osu.edu">zhang.8016@osu.edu</a> <br>
+        </li>
+        <li>
+          <strong>Treasurer</strong>: Michael Walker &nbsp;&nbsp;&nbsp;&nbsp;
+          <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:walker.2159@osu.edu">walker.2159@osu.edu</a> <br>
+        </li>
+        <li>
+          <strong>Secretary</strong>: Ron Chen &nbsp;&nbsp;&nbsp;&nbsp;
+          <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:chen.8336@osu.edu">chen.8336@osu.edu</a> <br>
+        </li>
+      </ul>
       <br>
       <strong>Former Leaders: </strong>
       <ul>
         <li>
-          AY 2019 - 2020: 
+          Academic Year 2019 - 2020: 
+          <ul>
+            <li> President: Laine Rumreich.1 </li>
+            <li> Vice President: Michael Walker.2159 </li>
+            <li> Treasurer: Riya Lengade.3 </li>
+          </ul>
         </li>
       </ul>
-      President: Laine Rumreich.1
-      Vice President: Michael Walker.2159
-      Treasurer: Riya Lengade.3
       <br>
       <h4 id="Apply"><i>Apply</i></h4><hr>
       Eligibility: <br>
