--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a class="navbar-brand" href="#">Home</a>
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="#News">Mentor Bios</a>
+                  <a class="nav-link" href="mentor_bio.html">Mentor Bios</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#Lead">Leadership</a>
@@ -45,31 +45,41 @@
         Do you have knowledge about coursework, research,  internships and student organizations to share with future CSE/CIS students? <br>
         If so, you’re invited to apply to be a CSE/CIS Peer mentor! <br>
         <br>
-        The CSE/CIS Peer Mentor program provides sophomores, juniors, and seniors with the opportunity to serve as a resource for first-year students during the survey class.
         We are a student org on campus, and we work closely with the CSE advisors to coordinate the program.
+        Our organization provides sophomores, juniors, and seniors with the opportunity to serve as a resource for first-year students during the survey class.
         If you enjoy to sharing your own successes and the challenges you’ve overcome while adjusting to college life, you would be a great fit. 
         This is an unpaid opportunity to gain public speaking and teaching assistant experience and looks good on a resume as a leadership position. <br>
       </div>
       <br>
       <h4 id="Lead"><i>Leadership</i></h4><hr>
-      <embed src="img/star.svg" width="16" height="16" type="image/svg+xml"/> <strong>Student Org Advisor</strong>: Kami Westhoff &nbsp;&nbsp;&nbsp;&nbsp;
-      <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:westhoff.11@osu.edu">westhoff.11@osu.edu</a> <br>
+      <embed src="img/star.svg" width="16" height="16" type="image/svg+xml"/> <strong>Student Org Advisor</strong>: Kami Westhoff
+      <div style="text-align:right">
+        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:westhoff.11@osu.edu">westhoff.11@osu.edu</a> <br>
+      </div>
       <ul>
         <li>
-          <strong>President</strong>: Aastha Gupta &nbsp;&nbsp;&nbsp;&nbsp;
-          <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:gupta.911@osu.edu">gupta.911@osu.edu</a> <br>
+          <strong>President</strong>: Aastha Gupta 
+          <div style="text-align:right">
+            <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:gupta.911@osu.edu">gupta.911@osu.edu</a> <br>
+          </div>
         </li>
         <li>
-          <strong>Vice President</strong>: Yue Zhang &nbsp;&nbsp;&nbsp;&nbsp;
-          <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:gupta.911@osu.edu">zhang.8016@osu.edu</a> <br>
+          <strong>Vice President</strong>: Yue Zhang
+          <div style="text-align:right">
+            <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:gupta.911@osu.edu">zhang.8016@osu.edu</a> <br>
+          </div>
         </li>
         <li>
-          <strong>Treasurer</strong>: Michael Walker &nbsp;&nbsp;&nbsp;&nbsp;
-          <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:walker.2159@osu.edu">walker.2159@osu.edu</a> <br>
+          <strong>Treasurer</strong>: Michael Walker
+          <div style="text-align:right">
+            <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:walker.2159@osu.edu">walker.2159@osu.edu</a> <br>
+          </div>
         </li>
         <li>
-          <strong>Secretary</strong>: Ron Chen &nbsp;&nbsp;&nbsp;&nbsp;
-          <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:chen.8336@osu.edu">chen.8336@osu.edu</a> <br>
+          <strong>Secretary</strong>: Ron Chen
+          <div style="text-align:right">
+            <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:chen.8336@osu.edu">chen.8336@osu.edu</a> <br>
+          </div>
         </li>
       </ul>
       <br>
