--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
 
       <div class="title">
         <h4 id="About"><i>About Us</i></h4><br>
-        Would you like to share what you have learned about surviving college as a CSE/CIS major? <br>
-        Do you have knowledge about coursework, research,  internships and student organizations to share with future CSE/CIS students? <br>
-        If so, you’re invited to apply to be a CSE/CIS Peer mentor! <br>
+        <h5> 
+          Would you like to share what you have learned about <i>surviving college</i> as a CSE/CIS major? <br>
+          Do you have knowledge about coursework, research, internships and student organizations to share with future CSE/CIS students? <br>
+          If so, you’re invited to apply to be a CSE/CIS Peer mentor! <br>
+        </h5>
         <br>
         We are a student org on campus, and we work closely with the CSE advisors to coordinate the program.
         Our organization provides sophomores, juniors, and seniors with the opportunity to serve as a resource for first-year students during the survey class.
@@ -52,35 +54,12 @@
       </div>
       <br>
       <h4 id="Lead"><i>Leadership</i></h4><hr>
-      <embed src="img/star.svg" width="16" height="16" type="image/svg+xml"/> <strong>Student Org Advisor</strong>: Kami Westhoff
-      <div style="text-align:right">
-        <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:westhoff.11@osu.edu">westhoff.11@osu.edu</a> <br>
-      </div>
+      <embed src="img/star.svg" width="16" height="16" type="image/svg+xml"/> <strong>Student Org Advisor</strong>: Kami Westhoff.11
       <ul>
-        <li>
-          <strong>President</strong>: Aastha Gupta 
-          <div style="text-align:right">
-            <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:gupta.911@osu.edu">gupta.911@osu.edu</a> <br>
-          </div>
-        </li>
-        <li>
-          <strong>Vice President</strong>: Yue Zhang
-          <div style="text-align:right">
-            <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:gupta.911@osu.edu">zhang.8016@osu.edu</a> <br>
-          </div>
-        </li>
-        <li>
-          <strong>Treasurer</strong>: Michael Walker
-          <div style="text-align:right">
-            <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:walker.2159@osu.edu">walker.2159@osu.edu</a> <br>
-          </div>
-        </li>
-        <li>
-          <strong>Secretary</strong>: Ron Chen
-          <div style="text-align:right">
-            <embed src="img/mail.svg" width="16" height="16" type="image/svg+xml"/> <a href="mailto:chen.8336@osu.edu">chen.8336@osu.edu</a> <br>
-          </div>
-        </li>
+        <li> <strong>President</strong>: Aastha Gupta.911 </li>
+        <li> <strong>Vice President</strong>: Yue Zhang.8016 </li>
+        <li> <strong>Treasurer</strong>: Michael Walker.2159 </li>
+        <li> <strong>Secretary</strong>: Ron Chen.8336 </li>
       </ul>
       <br>
       <strong>Former Leaders: </strong>
