--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h4 id="About"><i>About Us</i></h4><br>
         <h5> 
           Would you like to share what you have learned about <i>surviving college</i> as a CSE/CIS major? <br>
-          Do you have knowledge about coursework, research, internships and student organizations to share with future CSE/CIS students? <br>
+          Do you have knowledge about <i>coursework, research, internships and student organizations</i> to share with future CSE/CIS students? <br>
           If so, you’re invited to apply to be a CSE/CIS Peer mentor! <br>
         </h5>
         <br>
