--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="container">
-      <br>
+     <br>
      <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Home</a>
               <ul class="navbar-nav">
@@ -40,12 +40,12 @@
       </nav>
 
       <div class="title">
-        <h4 id="About"><i>About Us</i></h4><br>
-        <h5> 
+        <h4 id="About"><i>About Us</i></h4>
+        <strong> 
           Would you like to share what you have learned about <i>surviving college</i> as a CSE/CIS major? <br>
           Do you have knowledge about <i>coursework, research, internships and student organizations</i> to share with future CSE/CIS students? <br>
           If so, you’re invited to apply to be a CSE/CIS Peer mentor! <br>
-        </h5>
+        </strong>
         <br>
         We are a student org on campus, and we work closely with the CSE advisors to coordinate the program.
         Our organization provides sophomores, juniors, and seniors with the opportunity to serve as a resource for first-year students during the survey class.
