--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
       <div class="title">
         <h4 id="About"><i>About Us</i></h4>
         <strong> 
+          <embed src="img/alert-circle.svg" width="16" height="16" type="image/svg+xml"/> &nbsp;&nbsp;&nbsp;&nbsp;
           Would you like to share what you have learned about <i>surviving college</i> as a CSE/CIS major? <br>
+          <embed src="img/alert-circle.svg" width="16" height="16" type="image/svg+xml"/> &nbsp;&nbsp;&nbsp;&nbsp;
           Do you have knowledge about <i>coursework, research, internships and student organizations</i> to share with future CSE/CIS students? <br>
+          <embed src="img/alert-circle.svg" width="16" height="16" type="image/svg+xml"/> &nbsp;&nbsp;&nbsp;&nbsp;
           If so, you’re invited to apply to be a CSE/CIS Peer mentor! <br>
         </strong>
         <br>
