--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
           <embed src="img/alert-circle.svg" width="16" height="16" type="image/svg+xml"/> &nbsp;&nbsp;&nbsp;&nbsp;
           Would you like to share what you have learned about <i>surviving college</i> as a CSE/CIS major? <br>
           <embed src="img/alert-circle.svg" width="16" height="16" type="image/svg+xml"/> &nbsp;&nbsp;&nbsp;&nbsp;
-          Do you have knowledge about <i>coursework, research, internships and student organizations</i> to share with future CSE/CIS students? <br>
+          Do you have knowledge about <i>coursework, research, internships and student orgs</i> to share with future CSE/CIS students? <br>
           <br>
           If so, you’re invited to apply to be a CSE/CIS Peer mentor! <br>
         </strong>
         <br>
-        We are a student org on campus, and we work closely with the CSE advisors to coordinate the program.
+        We are a student organization on campus, and we work closely with the CSE advisors to coordinate the program.
         Our organization provides sophomores, juniors, and seniors with the opportunity to serve as a resource for first-year students during the survey class.
         If you enjoy to sharing your own successes and the challenges you’ve overcome while adjusting to college life, you would be a great fit. 
         This is an unpaid opportunity to gain public speaking and teaching assistant experience and looks good on a resume as a leadership position. <br>
