--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
   </head>
 
   <body>
-    <div class="container" style="text-align:center; margin-top: 15px; margin-bottom: 15px;">
-      <img src="img/CSECISLogoFullColor.png" width="50%">
+    <div class="container" style="margin-top: 15px; margin-bottom: 15px;">
+      <a href="https://www.osu.edu/"><img src="img/OSU.png" style="float:left"></a>
+      <img src="img/CSECISLogoFullColor.png" width="50%" style="float:right">
     </div>
 
     <div class="container">
