--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <div class="container" style="margin-top: 15px; margin-bottom: 15px;">
-      <a href="https://www.osu.edu/"><img src="img/OSU.png" style="float:left"></a>
+      <a href="https://www.osu.edu/"><img src="img/OSU.png" width="50%" style="float:left"></a>
       <img src="img/CSECISLogoFullColor.png" width="50%" style="float:right">
     </div>
 
