--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
   <body>
     <div class="container" style="margin-top: 15px; margin-bottom: 15px;">
-      <a href="https://www.osu.edu/"><img src="img/OSU.png" width="25%" style="float:left"></a>
-      <img src="img/CSECISLogoFullColor.png" width="50%" style="float:right">
+      <a href="https://www.osu.edu/"><img src="img/OSU.png" width="25%"></a>
+      <img src="img/CSECISLogoFullColor.png" width="50%">
     </div>
 
     <div class="container">
