--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#Apply">Apply</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#Apply">Piazza <embed src="img/external-link.svg" width="16" height="16" type="image/svg+xml"/></a>
+                </li>
               </ul>
       </nav>
 
