--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                   <a class="nav-link" href="#Apply">Apply</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#Apply">Piazza <embed src="img/external-link.svg" width="16" height="16" type="image/svg+xml"/></a>
+                  <a class="nav-link" href="https://piazza.com/class/keu02b8bktl5ou">Piazza <embed src="img/external-link.svg" width="16" height="16" type="image/svg+xml"/></a>
                 </li>
               </ul>
       </nav>
